# pkg/models/livestock.go
@@ -1,13 +1,16 @@
 package models
 
 type Livestocks struct {
-	ID           int `gorm:"primaryKey"`
-	Spesies      string
-	Age          string
-	HealthStatus string
-	Quantity     int
-	FarmAreaID   int
-	UserID       int
+	ID             int `gorm:"primaryKey"`
+	Spesies        string
+	Age            string
+	HealthStatus   string
+	KebutuhanMakan string
+	TypeOfFood     string
+	Quantity       int
+	FarmAreaID     int
+	UserID         int
+	Reference      string
 
 	Actions []Actions `gorm:"foreignKey:TargetID"`
 }
