# pkg/models/user.go
@@ -1,11 +1,14 @@
 package models
 
 type User struct {
-	ID       int `gorm:"primaryKey"`
-	Name     string
-	Email    string `gorm:"uniqueIndex"`
-	Role     string
-	Password string
+	ID              int `gorm:"primaryKey"`
+	Name            string
+	Email           string `gorm:"uniqueIndex"`
+	Role            string
+	Password        string
+	Address         string
+	LandArea        string
+	TypeOfLivestock string
 
 	Cctv       []Cctv       `gorm:"foreignKey:UserID"`
 	Action     []Actions    `gorm:"foreignKey:UserID"`
